deploy/k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openlaunch-api
  labels:
    app.kubernetes.io/name: openlaunch-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: openlaunch-api
